# clawra-in-cli

./: .gitignore  README.md  clawra_art.py  clawra_live.py  generate_multiview.py  memory.py  pyproject.toml  setup_views.py
characters/preset/aska/: soul.md
ttypal/: __init__.py  art.py  config.py  generate_multiview.py  live.py  memory.py  providers.py  setup_views.py
ttypal/characters/preset/clawra/: gaze.json  soul.md
ttypal/characters/preset/reze/: gaze.json  soul.md
