[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ttypal"
version = "0.1.0"
description = "Interactive braille art chatbot companion for your terminal"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "opencv-python-headless",
    "Pillow",
]

[project.optional-dependencies]
gemini = ["google-genai"]
openai = ["openai"]
anthropic = ["anthropic"]
chat = ["google-genai"]  # backwards compat: default to gemini
setup = ["flask", "google-genai"]
macos = ["pyobjc-framework-Quartz"]
all = [
    "google-genai",
    "openai",
    "anthropic",
    "flask",
    "pyobjc-framework-Quartz; sys_platform == 'darwin'",
]

[project.scripts]
ttypal = "ttypal.live:main"
ttypal-art = "ttypal.art:main"
ttypal-setup = "ttypal.setup_views:main"
ttypal-generate = "ttypal.generate_multiview:main"

[tool.hatch.build.targets.wheel]
packages = ["ttypal"]

[tool.hatch.build]
exclude = [
    "ttypal/characters/preset/*/views/views.npz",
    "ttypal/characters/preset/*/refs/*",
    "ttypal/characters/custom/",
]
